# gluebox-core

./: Cargo.toml  README.md  flake.nix
.config/: nextest.toml
.github/workflows/: ci.yml
src/: connector.rs  lib.rs  power.rs  registry.rs
